docs/api/v/2022.0.5/mat4.md
#![](../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2022.0.5`)  


---

## `luxe: mat4` module

- [Matrix](#matrix)   

---

### Matrix
`:::js import "luxe: mat4" for Matrix`
> no docs found

- [new](#Matrix.new)()
- [m](#Matrix.m)
- [ortho](#Matrix.ortho+6)(**left**: `Any`, **right**: `Any`, **top**: `Any`, **bottom**: `Any`, **near**: `Any`, **far**: `Any`)
- [pos_x](#Matrix.pos_x)
- [pos_y](#Matrix.pos_y)
- [pos_z](#Matrix.pos_z)
- [pos_x](#Matrix.pos_x=)=(v : Any)
- [pos_y](#Matrix.pos_y=)=(v : Any)
- [pos_z](#Matrix.pos_z=)=(v : Any)
- [pos](#Matrix.pos)
- [pos](#Matrix.pos=)=(v : Any)
- [scale_x](#Matrix.scale_x)
- [scale_y](#Matrix.scale_y)
- [scale_z](#Matrix.scale_z)

<hr/>
<endpoint module="luxe: mat4" class="Matrix" signature="new()"></endpoint>
<signature id="Matrix.new">Matrix.new()
<a class="headerlink" href="#Matrix.new" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Matrix`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="m"></endpoint>
<signature id="Matrix.m">Matrix.m
<a class="headerlink" href="#Matrix.m" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="ortho(left : Any, right : Any, top : Any, bottom : Any, near : Any, far : Any)"></endpoint>
<signature id="Matrix.ortho+6">Matrix.ortho(**left**: `Any`, **right**: `Any`, **top**: `Any`, **bottom**: `Any`, **near**: `Any`, **far**: `Any`)
<a class="headerlink" href="#Matrix.ortho+6" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos_x"></endpoint>
<signature id="Matrix.pos_x">Matrix.pos_x
<a class="headerlink" href="#Matrix.pos_x" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos_y"></endpoint>
<signature id="Matrix.pos_y">Matrix.pos_y
<a class="headerlink" href="#Matrix.pos_y" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos_z"></endpoint>
<signature id="Matrix.pos_z">Matrix.pos_z
<a class="headerlink" href="#Matrix.pos_z" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos_x=(v : Any)"></endpoint>
<signature id="Matrix.pos_x=">Matrix.pos_x=(v : Any)
<a class="headerlink" href="#Matrix.pos_x=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos_y=(v : Any)"></endpoint>
<signature id="Matrix.pos_y=">Matrix.pos_y=(v : Any)
<a class="headerlink" href="#Matrix.pos_y=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos_z=(v : Any)"></endpoint>
<signature id="Matrix.pos_z=">Matrix.pos_z=(v : Any)
<a class="headerlink" href="#Matrix.pos_z=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos"></endpoint>
<signature id="Matrix.pos">Matrix.pos
<a class="headerlink" href="#Matrix.pos" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="pos=(v : Any)"></endpoint>
<signature id="Matrix.pos=">Matrix.pos=(v : Any)
<a class="headerlink" href="#Matrix.pos=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="scale_x"></endpoint>
<signature id="Matrix.scale_x">Matrix.scale_x
<a class="headerlink" href="#Matrix.scale_x" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="scale_y"></endpoint>
<signature id="Matrix.scale_y">Matrix.scale_y
<a class="headerlink" href="#Matrix.scale_y" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: mat4" class="Matrix" signature="scale_z"></endpoint>
<signature id="Matrix.scale_z">Matrix.scale_z
<a class="headerlink" href="#Matrix.scale_z" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

